Fixed jumproll sound, Updated Network Mode

--- a/code/ui/PlayerHud.razor.scss
+++ b/code/ui/PlayerHud.razor.scss
@@ -11,7 +11,7 @@ PlayerHud {
 		position: absolute;
 		top: 32px;
 		left: 32px;
-		font-size: 64px;
+		font-size: 44px;
 		font-weight: bold;
 	}
 
